:memo: docs: add simple self-introduction
 + specify that blog page is under construction

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,12 +1,13 @@
 {
   "title": "About",
-  "welcome": "Welcome to my website!",
+  "welcome": "I am a Master's student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka Univ.)\nParticipate at Humanware Innovation Program",
   "publications": "Publications",
   "conference": "Conference",
   "journal": "Journal",
   "patent": "Patent",
   "contact": "Contact me",
   "blog": "Blog",
+  "preparation": "Content coming soon...",
   "affiliation": "Affiliation",
   "education": "Education",
   "laboratory": "Sakurai/Matsubara Laboratory",
