--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,12 +1,13 @@
 {
   "title": "千原 直己",
-  "welcome": "私のウェブサイトへようこそ！",
+  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 1年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
   "publications": "研究成果物",
   "conference": "学会",
   "journal": "論文誌",
   "patent": "特許",
   "contact": "お問い合わせ",
   "blog": "ブログ",
+  "preparation": "準備中...",
   "affiliation": "所属",
   "education": "学歴",
   "laboratory": "櫻井・松原研究室",
