--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -24,5 +24,11 @@
   "M.Sc.": "修士",
   "M.Sc. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
   "M.Sc. year": "[2023年-現在]",
-  "Ph.D.": "博士"
+  "Ph.D.": "博士",
+  "surname": "姓",
+  "name": "名",
+  "email": "メールアドレス",
+  "subject": "件名",
+  "message": "内容",
+  "send": "送信"
 }
