:art: fix: format of the code.
e.g., remove unnecessary blank

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,7 @@
   "patent": "Patent",
   "contact": "Contact me",
   "blog": "Blog",
-  "preparation": "Content coming soon...",
+  "preparation": "Coming Soon...",
   "affiliation": "Affiliation",
   "education": "Education",
   "laboratory": "Sakurai/Matsubara Laboratory",
