--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "title": "About",
   "welcome": "I am a Master's student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka Univ.)\nParticipate at Humanware Innovation Program",
+  "profile": "I am a M.Sc. student at Osaka University, Japan. I am interested in time-series analysis.",
   "publications": "Publications",
   "conference": "Conference",
   "journal": "Journal",
