--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,6 +1,7 @@
 {
   "title": "千原 直己",
   "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 1年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
+  "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "publications": "研究成果物",
   "conference": "学会",
   "journal": "論文誌",
