:pencil2: docs: update information

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,6 +10,11 @@
   "blog": "Blog",
   "preparation": "Coming Soon...",
   "affiliation": "Affiliation",
+  "experiences": "Experiences",
+  "nagase name": "Digital technology engineer at Nagase Co., Ltd.",
+  "nagase year": "[2021-2023]",
+  "sanken name": "Project Researcher at SANKEN, Osaka University",
+  "sanken year": "[2023-]",
   "education": "Education",
   "laboratory": "Sakurai/Matsubara Laboratory",
   "SANKEN": "The Institute of Scientific and Industrial Research",
@@ -27,6 +32,9 @@
   "M.Sc. year": "[2023-]",
   "Ph.D.": "Ph.D.",
   "Ph.D. year": "[2025-]",
+  "misc": "Miscellaneous",
+  "product": "Product",
+  "pandacco": "Pandacco Online Reservation App",
   "surname": "surname",
   "name": "name",
   "email": "email",
