--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -10,6 +10,11 @@
   "blog": "ブログ",
   "preparation": "準備中...",
   "affiliation": "所属",
+  "experiences": "職歴",
+  "nagase name": "株式会社ナガセ デジタル技術エンジニア",
+  "nagase year": "[2021年-2023年]",
+  "sanken name": "大阪大学 産業科学研究所 特任研究員",
+  "sanken year": "[2023年-現在]",
   "education": "学歴",
   "laboratory": "櫻井・松原研究室",
   "SANKEN": "産業科学研究所 (SANKEN)",
@@ -26,6 +31,9 @@
   "M.Sc. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
   "M.Sc. year": "[2023年-現在]",
   "Ph.D.": "博士",
+  "misc": "その他",
+  "product": "成果物",
+  "pandacco": "パンダッコ 予約用アプリ",
   "surname": "姓",
   "name": "名",
   "email": "メールアドレス",
