:pencil2: docs: corrected incorrect spelling

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,7 +13,7 @@
   "experiences": "Experiences",
   "nagase name": "Digital technology engineer at Nagase Co., Ltd.",
   "nagase year": "[2021-2023]",
-  "sanken name": "Project Researcher at SANKEN, Osaka University",
+  "sanken name": "Project researcher at SANKEN, Osaka University",
   "sanken year": "[2023-]",
   "education": "Education",
   "laboratory": "Sakurai/Matsubara Laboratory",
@@ -25,10 +25,10 @@
   "secondary name": "Takarazuka Kita High School, General Course, Hyogo Prefectural",
   "secondary year": "[2016-2019]",
   "B.Sc.": "B.Sc.",
-  "B.Sc. name": "Division of Electrical, Electronic and Information Engineering, Graduate School of Engineering, Osaka University",
+  "B.Sc. name": "Division of Electronic and Information Engineering, Osaka University",
   "B.Sc. year": "[2019-2023]",
   "M.Sc.": "M.Sc.",
-  "M.Sc. name": "Graduate School of Information Science and Technology, Information Systems Engineering, Osaka University",
+  "M.Sc. name": "Graduate School of Information Science and Technology, Division of Information Systems Engineering, Osaka University",
   "M.Sc. year": "[2023-]",
   "Ph.D.": "Ph.D.",
   "Ph.D. year": "[2025-]",
