--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,44 +1,65 @@
 {
   "title": "About",
-  "welcome": "I am a Master's student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka Univ.)\nParticipate at Humanware Innovation Program",
+  "welcome": "I am a M.Sc. student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka Univ.)\nParticipate at Humanware Innovation Program.",
   "profile": "I am a M.Sc. student at Osaka University, Japan. I am interested in time-series analysis.",
-  "publications": "Publications",
-  "conference": "Conference",
-  "journal": "Journal",
-  "patent": "Patent",
-  "contact": "Contact me",
-  "blog": "Blog",
-  "preparation": "Coming Soon...",
-  "affiliation": "Affiliation",
-  "experiences": "Experiences",
-  "nagase name": "Digital technology engineer at Nagase Co., Ltd.",
-  "nagase year": "[2021-2023]",
-  "sanken name": "Project researcher at SANKEN, Osaka University",
-  "sanken year": "[2023-]",
-  "education": "Education",
-  "laboratory": "Sakurai/Matsubara Laboratory",
-  "SANKEN": "The Institute of Scientific and Industrial Research",
-  "graduate": "Graduate School of Information Science and Technology",
-  "university": "Osaka University",
-  "address": "Address: Mihogaoka 8-1, Ibaraki, Osaka 567-0047, Japan",
-  "secondary": "Secondary School",
-  "secondary name": "Takarazuka Kita High School, General Course, Hyogo Prefectural",
-  "secondary year": "[2016-2019]",
-  "B.Sc.": "B.Sc.",
-  "B.Sc. name": "Division of Electronic and Information Engineering, Osaka University",
-  "B.Sc. year": "[2019-2023]",
-  "M.Sc.": "M.Sc.",
-  "M.Sc. name": "Graduate School of Information Science and Technology, Division of Information Systems Engineering, Osaka University",
-  "M.Sc. year": "[2023-]",
-  "Ph.D.": "Ph.D.",
-  "Ph.D. year": "[2025-]",
-  "misc": "Miscellaneous",
-  "product": "Product",
-  "pandacco": "Pandacco Online Reservation App",
-  "surname": "surname",
-  "name": "name",
-  "email": "email",
-  "subject": "subject",
-  "message": "message",
-  "send": "send"
+  "blog": {
+    "heading": "Blog",
+    "preparation": "Coming Soon..."
+  },
+  "publications": {
+    "heading": "Publications",
+    "conference": "Conference",
+    "journal": "Journal",
+    "patent": "Patent"
+  },
+  "grants": {
+    "heading": "Grants",
+    "hwip year": "[2023-]",
+    "hwip name": "Osaka University Humanware Innovation Program"
+  },
+  "experiences": {
+    "heading": "Experiences",
+    "nagase name": "Digital technology engineer at Nagase Co., Ltd.",
+    "nagase year": "[2021-2023]",
+    "TA name": "Teaching Assistant, Division of Electronic and Information Engineering, Osaka University",
+    "TA year": "[2023]",
+    "sanken name": "Project researcher at SANKEN, Osaka University",
+    "sanken year": "[2023-]"
+  },
+  "affiliation": {
+    "heading": "Affiliation",
+    "laboratory": "Sakurai/Matsubara Laboratory",
+    "SANKEN": "The Institute of Scientific and Industrial Research",
+    "graduate": "Graduate School of Information Science and Technology",
+    "university": "Osaka University",
+    "address": "Address: Mihogaoka 8-1, Ibaraki, Osaka 567-0047, Japan"
+  },
+  "education": {
+    "heading": "Education",
+    "secondary": "Secondary School",
+    "secondary name": "Takarazuka Kita High School, General Course, Hyogo Prefectural",
+    "secondary year": "[2016-2019]",
+    "B.Sc.": "B.Sc.",
+    "B.Sc. name": "Division of Electronic and Information Engineering,\nOsaka University",
+    "B.Sc. year": "[2019-2023]",
+    "M.Sc.": "M.Sc.",
+    "M.Sc. name": "Graduate School of Information Science and Technology,\nDivision of Information Systems Engineering,\nOsaka University",
+    "M.Sc. year": "[2023-]",
+    "Ph.D.": "Ph.D.",
+    "Ph.D. name": "Graduate School of Information Science and Technology,\nDivision of Information Systems Engineering,\nOsaka University",
+    "Ph.D. year": "[2025-]"
+  },
+  "misc": {
+    "heading": "Miscellaneous",
+    "pandacco": "Pandacco Online Reservation App"
+  },
+  "contact": {
+    "heading": "Contact me",
+    "surname": "surname",
+    "name": "name",
+    "email": "email",
+    "subject": "subject",
+    "message": "message",
+    "send": "send"
+  }
 }
