--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -2,42 +2,64 @@
   "title": "千原 直己",
   "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 1年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
-  "publications": "研究成果物",
-  "conference": "学会",
-  "journal": "論文誌",
-  "patent": "特許",
-  "contact": "お問い合わせ",
-  "blog": "ブログ",
-  "preparation": "準備中...",
-  "affiliation": "所属",
-  "experiences": "職歴",
-  "nagase name": "株式会社ナガセ デジタル技術エンジニア",
-  "nagase year": "[2021年-2023年]",
-  "sanken name": "大阪大学 産業科学研究所 特任研究員",
-  "sanken year": "[2023年-現在]",
-  "education": "学歴",
-  "laboratory": "櫻井・松原研究室",
-  "SANKEN": "産業科学研究所 (SANKEN)",
-  "graduate": "大阪大学大学院　情報科学研究科",
-  "university": "大阪大学",
-  "address": "住所：〒565-0871 茨木市美穂ヶ丘8-1",
-  "secondary": "高校",
-  "secondary name": "兵庫県立 宝塚北高校 普通科 卒業",
-  "secondary year": "[2016年-2019年]",
-  "B.Sc.": "学士",
-  "B.Sc. name": "大阪大学 工学部 電子情報工学科 卒業",
-  "B.Sc. year": "[2019年-2023年]",
-  "M.Sc.": "修士",
-  "M.Sc. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
-  "M.Sc. year": "[2023年-現在]",
-  "Ph.D.": "博士",
-  "misc": "その他",
-  "product": "成果物",
-  "pandacco": "パンダッコ 予約用アプリ",
-  "surname": "姓",
-  "name": "名",
-  "email": "メールアドレス",
-  "subject": "件名",
-  "message": "内容",
-  "send": "送信"
+  "blog": {
+    "heading": "ブログ",
+    "preparation": "準備中..."
+  },
+  "publications": {
+    "heading": "研究成果物",
+    "conference": "学会",
+    "journal": "論文誌",
+    "patent": "特許"
+  },
+  "grants": {
+    "heading": "助成金",
+    "hwip year": "[2023年-現在]",
+    "hwip name": "ヒューマンウェアイノベーション博士課程プログラム"
+  },
+  "experiences": {
+    "heading": "職歴",
+    "nagase name": "株式会社ナガセ デジタル技術エンジニア",
+    "nagase year": "[2021年-2023年]",
+    "TA name": "大阪大学 工学部 電子情報工学科 ティーチング・アシスタント (TA)",
+    "TA year": "[2023年]",
+    "sanken name": "大阪大学 産業科学研究所 特任研究員",
+    "sanken year": "[2023年-現在]"
+  },
+  "affiliation": {
+    "heading": "所属",
+    "laboratory": "櫻井・松原研究室",
+    "SANKEN": "産業科学研究所 (SANKEN)",
+    "graduate": "大阪大学大学院 情報科学研究科",
+    "university": "大阪大学",
+    "address": "住所：〒565-0871 茨木市美穂ヶ丘8-1"
+  },
+  "education": {
+    "heading": "学歴",
+    "secondary": "高校",
+    "secondary name": "兵庫県立 宝塚北高校 普通科 卒業",
+    "secondary year": "[2016年-2019年]",
+    "B.Sc.": "学士",
+    "B.Sc. name": "大阪大学 工学部 電子情報工学科 卒業",
+    "B.Sc. year": "[2019年-2023年]",
+    "M.Sc.": "修士",
+    "M.Sc. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
+    "M.Sc. year": "[2023年-現在]",
+    "Ph.D.": "博士",
+    "Ph.D. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
+    "Ph.D. year": "[2025年-現在]"
+  },
+  "misc": {
+    "heading": "その他",
+    "pandacco": "パンダッコ 予約用アプリ"
+  },
+  "contact": {
+    "heading": "お問い合わせ",
+    "surname": "姓",
+    "name": "名",
+    "email": "メールアドレス",
+    "subject": "件名",
+    "message": "内容",
+    "send": "送信"
+  }
 }
