--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "title": "About",
-  "welcome": "I am a M.Sc. student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka Univ.)\nParticipate at Humanware Innovation Program.",
+  "welcome": "I am a first-year M.Sc. student at Osaka University, Japan.\nProject researcher at SANKEN (The Institute of Scientific and Industrial Research at Osaka University).\nParticipating in Humanware Innovation Program.",
   "profile": "I am a M.Sc. student at Osaka University, Japan. I am interested in time-series analysis.",
   "blog": {
     "heading": "Blog",
@@ -10,25 +10,29 @@
     "heading": "Publications",
     "conference": "Conference",
     "journal": "Journal",
-    "patent": "Patent"
+    "patent": "Patent",
+    "my name": "Naoki Chihara",
+    "tod101 title": "Real-time Forecasting of Time-evolving Data Streams using Dynamic Mode Decomposition",
+    "tod101 info": "IPSJ Transactions on Databases (TOD), Vol.xx, No. x, pp. xx-xx, 13 April 2024.",
+    "tod101 co-authors": "Yasuko Matsubara, Ren Fujiwara, Yasushi Sakurai"
   },
   "grants": {
     "heading": "Grants",
-    "hwip year": "[2023-]",
+    "hwip year": "[2023.04-present]",
     "hwip name": "Osaka University Humanware Innovation Program"
   },
   "experiences": {
     "heading": "Experiences",
     "nagase name": "Digital technology engineer at Nagase Co., Ltd.",
-    "nagase year": "[2021-2023]",
+    "nagase year": "[2020.09-2023.03]",
     "TA name": "Teaching Assistant, Division of Electronic and Information Engineering, Osaka University",
-    "TA year": "[2023]",
+    "TA year": "[2023.04-2023.09]",
     "sanken name": "Project researcher at SANKEN, Osaka University",
-    "sanken year": "[2023-]"
+    "sanken year": "[2023.06-present]"
   },
   "affiliation": {
     "heading": "Affiliation",
-    "laboratory": "Sakurai/Matsubara Laboratory",
+    "laboratory": "Sakurai & Matsubara Lab.",
     "SANKEN": "The Institute of Scientific and Industrial Research",
     "graduate": "Graduate School of Information Science and Technology",
     "university": "Osaka University",
@@ -38,16 +42,16 @@
     "heading": "Education",
     "secondary": "Secondary School",
     "secondary name": "Takarazuka Kita High School, General Course, Hyogo Prefectural",
-    "secondary year": "[2016-2019]",
+    "secondary year": "[2016.04-2019.03]",
     "B.Sc.": "B.Sc.",
-    "B.Sc. name": "Division of Electronic and Information Engineering,\nOsaka University",
-    "B.Sc. year": "[2019-2023]",
+    "B.Sc. name": "School of Engineering, Division of Electronic and Information Engineering, Osaka University",
+    "B.Sc. year": "[2019.04-2023.03]",
     "M.Sc.": "M.Sc.",
-    "M.Sc. name": "Graduate School of Information Science and Technology,\nDivision of Information Systems Engineering,\nOsaka University",
-    "M.Sc. year": "[2023-]",
+    "M.Sc. name": "Graduate School of Information Science and Technology, Division of Information Systems Engineering, Osaka University",
+    "M.Sc. year": "[2023.04-present]",
     "Ph.D.": "Ph.D.",
     "Ph.D. name": "Graduate School of Information Science and Technology,\nDivision of Information Systems Engineering,\nOsaka University",
-    "Ph.D. year": "[2025-]"
+    "Ph.D. year": "[2025.04-present]"
   },
   "misc": {
     "heading": "Miscellaneous",
