:pencil2: docs: fix information

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -36,7 +36,7 @@
     "SANKEN": "産業科学研究所 (SANKEN)",
     "graduate": "大阪大学大学院 情報科学研究科",
     "university": "大阪大学",
-    "address": "住所：〒565-0871 大阪府茨木市美穂ヶ丘 8-1"
+    "address": "住所: 〒565-0871 大阪府茨木市美穂ヶ丘 8-1"
   },
   "education": {
     "heading": "学歴",
