--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -10,11 +10,7 @@
     "heading": "研究成果物",
     "conference": "学会",
     "journal": "論文誌",
-    "patent": "特許",
-    "my name": "千原 直己",
-    "tod101 title": "動的モード分解による時系列データストリームの将来予測",
-    "tod101 info": "情報処理学会論文誌データベース (TOD), Vol.xx, No. x, pp. xx-xx, 2024年4月13日.",
-    "tod101 co-authors": "松原 靖子, 藤原 廉, 櫻井 保志"
+    "patent": "特許"
   },
   "grants": {
     "heading": "助成金",
