--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -36,18 +36,10 @@
   },
   "education": {
     "heading": "学歴",
-    "secondary": "高校",
-    "secondary name": "兵庫県立 宝塚北高校 普通科 卒業",
-    "secondary year": "[2016年4月-2019年3月]",
-    "B.Sc.": "学士",
-    "B.Sc. name": "大阪大学 工学部 電子情報工学科 卒業",
-    "B.Sc. year": "[2019年4月-2023年3月]",
-    "M.Sc.": "修士",
-    "M.Sc. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
-    "M.Sc. year": "[2023年4月-現在]",
-    "Ph.D.": "博士",
-    "Ph.D. name": "大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
-    "Ph.D. year": "[2025年4月-現在]"
+    "secondary": "[2016年4月-2019年3月]: 高校\n兵庫県立 宝塚北高校 普通科 卒業",
+    "B.Sc.": "[2019年4月-2023年3月]: 学士\n大阪大学 工学部 電子情報工学科 卒業",
+    "M.Sc.": "[2023年4月-現在]: 修士\n大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
+    "Ph.D.": "[2025年4月-現在]: 博士\n大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍"
   },
   "misc": {
     "heading": "その他",
