--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "title": "千原 直己",
-  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 1年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
+  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 2年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "blog": {
     "heading": "ブログ",
@@ -19,12 +19,10 @@
   },
   "experiences": {
     "heading": "職歴",
-    "nagase name": "株式会社ナガセ デジタル技術エンジニア",
-    "nagase year": "[2020年9月-2023年3月]",
-    "TA name": "大阪大学 工学部 電子情報工学科 ティーチング・アシスタント (TA)",
-    "TA year": "[2023年4月-2023年9月]",
-    "sanken name": "大阪大学 産業科学研究所 特任研究員",
-    "sanken year": "[2023年6月-現在]"
+    "nagase": "[2020年9月-2023年3月]: 株式会社ナガセ デジタル技術エンジニア",
+    "IST": "[2021年6月-2023年3月]: 大阪大学大学院 情報科学研究科 アルバイト\n変動天体の探索に関する補助",
+    "TA": "[2023年4月-2023年9月]: 大阪大学工学部 ティーチング・アシスタント (TA)",
+    "SANKEN": "[2023年6月-現在]: 大阪大学 産業科学研究所 特任研究員S"
   },
   "affiliation": {
     "heading": "所属",
