--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -19,29 +19,44 @@
   },
   "experiences": {
     "heading": "職歴",
-    "nagase": "[2020年9月-2023年3月]: 株式会社ナガセ デジタル技術エンジニア",
-    "IST": "[2021年6月-2023年3月]: 大阪大学大学院 情報科学研究科 アルバイト\n変動天体の探索に関する補助",
-    "TA": "[2023年4月-2023年9月]: 大阪大学工学部 ティーチング・アシスタント (TA)",
-    "SANKEN": "[2023年6月-現在]: 大阪大学 産業科学研究所 特任研究員S"
+    "nagase-date": "[2020年9月-2023年3月]",
+    "nagase": "株式会社ナガセ デジタル技術エンジニア",
+    "IST-date": "[2021年6月-2023年3月]",
+    "IST": "大阪大学 情報科学研究科 アルバイト",
+    "IST-content1": "変動天体の探索に関する補助",
+    "TA-date": "[2023年4月-2023年9月]",
+    "TA": "大阪大学 工学部 ティーチング・アシスタント (TA)",
+    "TA-content1": "数学解析演習",
+    "SANKEN-date": "[2023年6月-現在]",
+    "SANKEN": "大阪大学 産業科学研究所 特任研究員S"
   },
   "affiliation": {
     "heading": "所属",
     "laboratory": "櫻井・松原研究室",
     "SANKEN": "産業科学研究所 (SANKEN)",
-    "graduate": "大阪大学大学院 情報科学研究科",
+    "graduate": "大阪大学 情報科学研究科",
     "university": "大阪大学",
     "address": "住所: 〒565-0871 大阪府茨木市美穂ヶ丘 8-1"
   },
   "education": {
     "heading": "学歴",
-    "secondary": "[2016年4月-2019年3月]: 高校\n兵庫県立 宝塚北高校 普通科 卒業",
-    "B.Sc.": "[2019年4月-2023年3月]: 学士\n大阪大学 工学部 電子情報工学科 卒業",
-    "M.Sc.": "[2023年4月-現在]: 修士\n大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍",
-    "Ph.D.": "[2025年4月-現在]: 博士\n大阪大学大学院 情報科学研究科 情報システム工学専攻 在籍"
+    "secondary-date": "[2016年4月-2019年3月]",
+    "secondary": "高校",
+    "secondary-content1": "兵庫県立 宝塚北高校 普通科",
+    "Bachelor-date": "[2019年4月-2023年3月]",
+    "Bachelor": "学士（工学）",
+    "Bachelor-content1": "大阪大学 工学部 電子情報工学科",
+    "Master-date": "[2023年4月-現在]",
+    "Master": "修士（情報科学）",
+    "Master-content1": "大阪大学 情報科学研究科 情報システム工学専攻",
+    "Doctor-date": "[2025年4月-現在]",
+    "Doctor": "博士（情報科学）",
+    "Doctor-content1": "大阪大学 情報科学研究科 情報システム工学専攻"
   },
   "misc": {
     "heading": "その他",
-    "pandacco": "パンダッコ 予約用アプリ"
+    "pandacco": "パンダッコ 予約用アプリ",
+    "pakdd2023": "PAKDD2023に運営ボランティアとして参加"
   },
   "contact": {
     "heading": "お問い合わせ",
