✏️ fix: minor changes in expression
- change from "secondary school" to "high school"

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -41,7 +41,7 @@
   "education": {
     "heading": "Education",
     "secondary-date": "[2016.04-2019.03]",
-    "secondary": "Secondary School",
+    "secondary": "High School Diploma",
     "secondary-content1": "Takarazuka Kita High School, Hyogo, Japan",
     "Bachelor-date": "[2019.04-2023.03]",
     "Bachelor": "B.Sc. in Engineering",
