📝 docs: add supervisor information
- fix design, slightly.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -44,13 +44,15 @@
     "heading": "Education",
     "secondary-date": "[2016.04-2019.03]",
     "secondary": "High School Diploma",
-    "secondary-content1": "Takarazuka Kita High School, Hyogo, Japan",
+    "secondary-affiliation": "Takarazuka Kita High School, Hyogo, Japan",
     "Bachelor-date": "[2019.04-2023.03]",
     "Bachelor": "B.Sc. in Engineering",
-    "Bachelor-content1": "Osaka University, Osaka, Japan",
+    "Bachelor-affiliation": "Osaka University, Osaka, Japan",
+    "Bachelor-supervisor": "Supervisor: Prof. Makoto Onizuka",
     "Master-date": "[2023.04-present]",
     "Master": "M.Sc. in Information Science and Technology",
-    "Master-content1": "Osaka University, Osaka, Japan",
+    "Master-affiliation": "Osaka University, Osaka, Japan",
+    "Master-supervisor": "Supervisor: Prof. Yasushi Sakurai",
     "Doctor-date": "[2025.04-present]",
     "Doctor": "Ph.D.\nGraduate School of Information Science and Technology, Division of Information Systems Engineering, Osaka University"
   },
