--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -13,7 +13,9 @@
     "patent": "特許"
   },
   "grants": {
-    "heading": "助成金",
+    "heading": "助成金 & 受賞",
+    "deim2024-date": "[2024年6月]",
+    "deim2024": "DEIM2024 優秀論文賞",
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "Volunteer Award (PAKDD2023)",
     "hwip-date": "[2023年4月-現在]",
