--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "title": "千原 直己",
-  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 2年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム",
+  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 2年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム\n時系列データマイニングの研究に従事しています.",
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "blog": {
     "heading": "ブログ",
@@ -62,9 +62,11 @@
   "misc": {
     "heading": "その他",
     "pandacco-date": "[2023年3月-現在]",
-    "pandacco": "パンダッコ 予約用アプリ",
+    "pandacco": "地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属",
     "pakdd2023-date": "[2023年5月]",
-    "pakdd2023": "PAKDD2023に運営ボランティアとして参加"
+    "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
+    "pigicon2023-date": "[2023年12月]",
+    "pigicon2023": "第2回 リクルートプログラミングコンテスト (PIGICON2023) 準優勝"
   },
   "contact": {
     "heading": "お問い合わせ",
