📝 docs: add information of publications
- forgotten to push these files in previous commit

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -10,7 +10,42 @@
     "heading": "研究成果物",
     "conference": "学会",
     "journal": "論文誌",
-    "patent": "特許"
+    "patent": "特許",
+    "DEIM2024": {
+      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+      "title": "動的モード分解を活用した高速将来予測アルゴリズム",
+      "venue": {
+        "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
+        "others": "兵庫, T2-B-6-02, 2024年2月29日"
+      },
+      "awards": ["DEIM2024 優秀論文賞", "2024年度山下記念賞"]
+    },
+    "DAS2024": {
+      "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
+      "venue": {
+        "name": "第36回自律分散システム・シンポジウム",
+        "others": "東京, 1C2-4, 2024年2月16日"
+      },
+      "awards": []
+    },
+    "TOD101": {
+      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+      "title": "動的モード分解による時系列データストリームの将来予測",
+      "venue": {
+        "name": "情報処理学会論文誌データベース (TOD)",
+        "others": "Vol. 17, No. 2, pp. 1-11, 2024年4月23日"
+      },
+      "awards": []
+    },
+    "DEIM2023": {
+      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+      "title": "周期解析による変動天体の検出",
+      "venue": {
+        "name": "第15回データ工学と情報マネジメントに関するフォーラム (DEIM2023)",
+        "others": "岐阜, 4a-6-3, 2023年3月6日"
+      },
+      "awards": []
+    }
   },
   "grants": {
     "heading": "助成金 & 受賞",
