📝 remove: incorrect information

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -26,7 +26,7 @@
         "name": "The 16th Forum on Data Engineering and Information Management (DEIM2024)",
         "others": "Hyogo, Japan, February 28 - March 5, 2024"
       },
-      "awards": ["DEIM2024 Best Paper Award Runner-up", "2024 IPSJ Yamashita SIG Research Award"]
+      "awards": ["DEIM2024 Best Paper Award Runner-up"]
     },
     "DAS2024": {
       "authors": ["Aiyi Li", "Kenya Hoshimure", "Kei Tanigaki", "Yota Hatano", "Reina Nozawa", "Yuki Sakamoto", "Yuanzhou Wei", "Naoki Chihara", "Naoki Kodani"],
