--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -18,7 +18,7 @@
         "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
         "others": "兵庫, T2-B-6-02, 2024年2月29日"
       },
-      "awards": ["DEIM2024 優秀論文賞", "2024年度山下記念賞"]
+      "awards": ["DEIM2024 優秀論文賞"]
     },
     "DAS2024": {
       "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
