📝 chore: minor change
- remove presentation id.

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -16,7 +16,7 @@
       "title": "動的モード分解を活用した高速将来予測アルゴリズム",
       "venue": {
         "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
-        "others": "兵庫, T2-B-6-02, 2024年2月29日"
+        "others": "兵庫, 2024年2月29日〜3月5日"
       },
       "awards": ["DEIM2024 優秀論文賞"]
     },
@@ -24,7 +24,7 @@
       "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
       "venue": {
         "name": "第36回自律分散システム・シンポジウム",
-        "others": "東京, 1C2-4, 2024年2月16日"
+        "others": "東京, 2024年2月16日〜2月17日"
       },
       "awards": []
     },
@@ -42,7 +42,7 @@
       "title": "周期解析による変動天体の検出",
       "venue": {
         "name": "第15回データ工学と情報マネジメントに関するフォーラム (DEIM2023)",
-        "others": "岐阜, 4a-6-3, 2023年3月6日"
+        "others": "岐阜, 2023年3月5日〜3月9日"
       },
       "awards": []
     }
@@ -101,7 +101,7 @@
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
     "pigicon2023-date": "[2023年12月]",
-    "pigicon2023": "第2回 リクルートプログラミングコンテスト (PIGICON2023) 準優勝"
+    "pigicon2023": "第2回リクルートプログラミングコンテスト (PIGICON2023) 準優勝"
   },
   "contact": {
     "heading": "お問い合わせ",
