--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -76,7 +76,7 @@
     "SANKEN": "産業科学研究所 (SANKEN)",
     "graduate": "大阪大学 情報科学研究科",
     "university": "大阪大学",
-    "address": "住所: 〒565-0871 大阪府茨木市美穂ヶ丘 8-1"
+    "address": "565-0871 大阪府茨木市美穂ヶ丘 8-1"
   },
   "education": {
     "heading": "学歴",
