--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,7 +1,7 @@
 {
   "title": "千原 直己",
-  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程 2年\n同大学 産業科学研究所 特任研究員\nヒューマンウェアイノベーション博士課程プログラム\n時系列データマイニングの研究に従事しています.",
-  "cv": "履歴書は<l>こちら</l>",
+  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程に在籍. <br />同大学 産業科学研究所 特任研究員S. <br />ヒューマンウェアイノベーション博士課程プログラム 11期生. <br />時系列データマイニングの研究に従事しています.",
+  "cv": "履歴書は<link_cv>こちら</link_cv>",
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "blog": {
     "heading": "ブログ",
